Expose component in publish gh workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,10 @@ name: Build & Push Docker Image
 on:
   workflow_call:
     inputs:
+      component:
+        description: "Component name (i.e. flytepropeller, flyteadmin, etc)"
+        required: true
+        type: string
       dockerfile:
         description: "Dockerfile name"
         required: true
@@ -11,9 +15,9 @@ on:
         description: "Version of image"
         required: true
         type: string
-      repository:
-        description: "Repository Name"
-        required: false
+      github-organization:
+        description: "Organization Name"
+        required: true
         type: string
       push:
         description: "Push to registry"
@@ -51,7 +55,7 @@ jobs:
         id: tags
         uses: docker/metadata-action@v3
         with:
-          images: ghcr.io/${{ inputs.repository }}
+          images: ghcr.io/${{ inputs.repository }}/${{ inputs.component }}
           tags: |
             type=raw,value=latest
             type=raw,value=${{ inputs.version }}
@@ -61,7 +65,7 @@ jobs:
       - name: Build and Push Image
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ${{ inputs.component }}
           file: ${{ inputs.dockerfile }}
           platforms: linux/arm64,linux/amd64
           push: ${{ inputs.push }}
