--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ${{ inputs.component }}
-          file: ${{ inputs.dockerfile }}
+          file: ${{ inputs.component }}/${{ inputs.dockerfile }}
           platforms: linux/arm64,linux/amd64
           push: ${{ inputs.push }}
           tags: ${{ steps.tags.outputs.tags }}
